--- a/setting.html
+++ b/setting.html
@@ -11,7 +11,7 @@
             --main-color: rgba(var(--color));
             --backcolor-hover: rgba(var(--color), 0.10);
             --backcolorgray-hover: rgba(0,0,0,0.05);
-            --background-color: #f0f0f0;
+            --background-color: #ffffff;
             --main-back: var(--background-color);
             --text-color: #000000;
             --text-color-hover: white;
@@ -133,10 +133,6 @@
             margin: 0;
         }
 
-        svg {
-            height: 15px;
-        }
-
     </style>
 </head>
 <body>
@@ -144,7 +140,7 @@
     <header>
         Dies ist eine Alpha Version, die Editierbaren Einstellungen kommen mit der <code>v.0.8</code>
     </header>
-    <h3><i data-feather="book-open"></i> Anleitung</h3>
+    <h3>Anleitung</h3>
     <main>
         <details class="content-header">
             <summary>Bilder Ändern</summary>
@@ -200,7 +196,7 @@
             </div>
         </details>
     </main>
-    <h3><i data-feather="git-merge"></i> Roadmap</h3>
+    <h3>Roadmap</h3>
     <main>
         <details class="content-header">
             <summary>2024 Q4</summary>
@@ -208,9 +204,9 @@
                 v.0.7.6
                 <ul>
                     <li>Homepage</li>
-                    <li>Icon in Overview</li>
                     <li>leichte Verbesserungen im Design</li>
                     <li>config.json Datei</li>
+                    <li>Window</li>
                 </ul>
             </div>
         </details>
@@ -229,44 +225,22 @@
                     <li>Personalisierte Accounts</li>
                     <li>Django - Backend</li>
                     <li>Svelte - Fontend</li>
+                    <li>Mehrere Sprachen</li>
                 </ul>
             </div>
         </details>
-        <hr>
-        <details class="content-header">
-        <summary>2025 Q2</summary>
-        <div class="content-main">
-            v.0.8.1
-            <ul>
-                <li>Mehrere Sprachen</li>
-            </ul>
-            v.0.8.2
-            <ul>
-                <li>Plugins für Header</li>
-            </ul>
-        </div>
-    </details>
     </main>
     <footer>
-        <i data-feather="folder"></i>Projekt: openMoto-webdesk <br>
-        <i data-feather="git-branch"></i>Version: 0.7.5 <br>
-        <i data-feather="github"></i>Github: <a href="https://github.com/BIT-TAG/openMoto-webdesk">Reposetory</a><br>
-        <i data-feather="gitlab"></i>Gitlab: coming soon <br>
-        <i data-feather="monitor"></i>Webpage: <a href="http://open-moto.org">Projekt Webseite</a> (openMoto)
+        Projekt: openMoto-webdesk <br>
+        Version: 0.7.5 <br>
+        Github: <a href="https://github.com/BIT-TAG/openMoto-webdesk">Reposetory</a><br>
+        Gitlab: coming soon <br>
+        Webpage: <a href="http://open-moto.org">Projekt Webseite</a> (openMoto)
         <br><br>
-        <i data-feather="users"></i>Organisation: BIT-TAG EK <br>
-        <i data-feather="monitor"></i>Webpage: <a href="http://bit-tag.com">BIT-TAG Webseite</a> <br>
-        <i data-feather="user"></i>Autor: Dustin Ludwig <br>
+        Organisation: BIT-TAG EK <br>
+        Webpage: <a href="http://bit-tag.com">BIT-TAG Webseite</a> <br>
+        Autor: Dustin Ludwig <br>
     </footer>
 </div>
-<script src="https://unpkg.com/feather-icons"></script>
-<script>
-    /* =========================================================
-       Einbindung von Icons
-    ============================================================ */
-
-    feather.replace(); // Initialisiere die Icons
-
-</script>
 </body>
 </html>
