--- a/webdesk.html
+++ b/webdesk.html
@@ -81,7 +81,7 @@
                         <li><button id="closeAllButton">Alles schließen</button></li>
                     </ul>
                 </li>
-                <li><button class="login-button">Anmelden</button></li>
+                <li><button class="login-button" onclick="sysLogin()">Anmelden</button></li>
             </ul>
         </div>
     </header>
