--- a/home.html
+++ b/home.html
@@ -18,6 +18,7 @@
             font-family: 'Arial', sans-serif;
             height: 100vh;
             background-image: url(hintergrundbild.jpg);
+            background-color: gray;
             background-size: cover;
             background-position: center;
             display: flex;
